# submit-patch

./: .env.example  .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  a.js  auth.go  badge.go  buf.gen.yaml  canal.go  character-review.go  character.go  config.go  config.py  db.go  embed_dev.go  embed_prod.go  episode-review.go  episode.go  episode.sql  go.mod  go.sum  handler.go  index.go  kafka.go  main.go  new.go  notify.go  package.json  patch.go  person-review.go  person.go  pyproject.toml  query.sql  requirements-poetry.txt  review.go  routers.go  (+15 more)
.github/: mergify.yml  renovate.json
.github/workflows/: ci.yaml  lint-review.yaml  lint.yaml  release-docker.yaml  review.yaml  security.yaml
api/: api.go
bgm/: __init__.py
csrf/: csrf.go
dal/: db.go  models.go  query.sql.go
dao/: models.go  query.sql.go
data/: data.go
db/: init.sql  models.go  query.sql  query.sql.go  schema.sql
db/migrations/: 000001_create_tables.up.sql  000002_go.up.sql  000003_no-patch-type.up.sql  000004_notify-id.up.sql  000004_num-id.up.sql  000005_mono.down.sql  000005_mono.up.sql  000006_meta_tags.down.sql  000006_meta_tags.up.sql
dto/: api.go
internal/diff/: diff.go
internal/myers/: diff.go
internal/util/: util.go  util_test.go
lint/: models.py
lint/wiki/: __init__.py  wiki_test.py
q/: db.go  models.go  query.sql.go
scripts/: build-common.py  fetch-bootstrap.py  fetch-static-files.py  fetch_users.py  generate-badge.py
server/: __init__.py  app.py  auth.py  badge.py  base.py  config.py  contrib.py  db.py  errors.py  file_digest.py  index.py  migration.py  model.py  patch.py  queue.py  review.py  router.py  strings.py  strings_test.py  tmpl.py  verify.py
server/sql/: 000-drop-view.sql  001-init.sql  004-deleted-view.sql  005-edit-suggestion.sql  006-create-index.sql  009-show-suggestion-count.sql  011-extra-description.sql  012-show-ep-num.sql  013-add-subject-platform.sql  014-change-reject-reson-to-text.sql
server/static/bootstrap/: package.json
server/static/bootstrap/5.3.3/: package.json
server/static/diff2html/: package.json
server/templates/: diff.html  error.html.jinja2  index-login.html  index.html  index.html.jinja2  list.html.jinja2  login.html  login.html.jinja2  new-subject.html.jinja2  patch.html.jinja2  select-subject.html.jinja2  suggest.html.jinja2
server/templates/component/: header.html  header.html.jinja2  pagination.html.jinja2
server/templates/contrib/: index.html.jinja2
server/templates/episode/: patch.html.jinja2  select.html.jinja2  suggest.html.jinja2
server/templates/layout/: base.html.jinja2
server/templates/wiki/: index.html.jinja2
session/: session.go
static/: new-wiki.1.mjs
static/bootstrap/: installed.json
static/common/: network_services.6593ed.json  scope.schema.aa581c.json  subject_platforms.370f9e.json  subject_platforms.9b43ea.json  subject_platforms.fc5f5a.json  subject_relations.c2e004.json  subject_staffs.39fa85.json  subject_staffs.f2898d.json  wiki_template.02f3a7.json  wiki_template.2ffc41.json  wiki_template.7ce1ba.json
static/diff2html/: installed.json
static/src/: new-subject.mjs
templates/: character-list.templ  character-list_templ.go  character.templ  character_templ.go  episode-list.templ  episode-list_templ.go  episode.templ  episode_templ.go  hello.templ  hello_templ.go  index.templ  index_templ.go  layout.templ  layout_templ.go  list.templ  list_templ.go  login.templ  login_templ.go  page.templ  page_templ.go  patch-common.templ  patch-common_templ.go  person-list.templ  person-list_templ.go  person.templ  person_templ.go  subject-list.templ  subject-list_templ.go  subject.templ  subject_templ.go  user-page.templ  user-page_templ.go  utils.go  vars.go
view/: data.go
view/templates/base/: layout.gohtml  pagination.gohtml
view/templates/page/: character-edit.gohtml  debug.gohtml  episode-edit.gohtml  index.gohtml  login.gohtml  person-edit.gohtml  subject-edit.gohtml  subject-list.gohtml
wiki/: __init__.py  wiki_test.py
