[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
#
asyncpg = "^0.29.0"
httpx = { extras = ["http2"], version = "^0.27.2" }
jinja2 = "^3.1.4"
sslog = "0.0.0a48"
litestar = { version = "^2.12.1", extras = ['jinja'] }
redis = { extras = ["hiredis"], version = "^5.0.8" }
uvicorn = { version = "^0.30.6" }
uuid-utils = "^0.9.0"
regex = "^2024.9.11"
bgm-tv-wiki = "^0.0.26"

# speedup litestar
fast-query-parsers = "^1.0.3"

# speedup uvicorn
httptools = "^0.6.1"
uvloop = { version = '^0.20.0', platform = 'linux' }
anyio = '^4.6.0'

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
asyncpg-stubs = "^0.29.1"
types-redis = "^4.6.0.20240806"
types-python-dateutil = "^2.9.0.20240316"
types-regex = "^2024.7.24.20240726"
types-pyyaml = "^6.0.12.20240808"
python-dotenv = "^1.0.1"
watchfiles = '0.24.0'

[tool.black]
line-length = 100

[tool.ruff]
cache-dir = ".venv/.cache/ruff"
line-length = 100
target-version = 'py310'

exclude = ['dist', '.venv']

[tool.ruff.format]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ['ALL']
#extend-select = ["I", 'PLE', 'E402', 'PLR0402', 'UP', 'F401', 'TID252', 'DTZ']
unfixable = ['F841']
ignore = [
    "A001", "A002",
    "ANN",
    "ARG001", "ARG002",
    "C",
    "COM",
    "CPY001",
    "D100", "D101", "D103", "D107", "D102", "D104", "D105", "D415",
    "DOC201", "DOC501",
    "E501",
    "EM",
    "ERA001",
    "FBT",
    "INP001",
    "ISC001",
    "N815", "N818",
    "PERF401",
    "PD",
    "PGH003",
    "PLR0911", "PLR0912", "PLR0913", "PLR0914", "PLR0915", "PLR0917", "PLR2004", "PLR6104", "PLR6301",
    "PLW2901",
    "PTH",
    "PYI041",
    "RET503", "RET504",
    "RSE102",
    "RUF001", "RUF003", "RUF029",
    "S101", "S608",
    "SIM102", "SIM108", "SIM110", "SIM117",
    "T20",
    "TCH001", "TCH002", "TCH003",
    "TRY002", "TRY003", "TRY201", "TRY300",
    "UP027", "UP027", "UP032",
    "FLY002", "SIM103",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ['N999']

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.isort]
#length-sort = true
lines-after-imports = 2
known-first-party = ["lint", "bgm", "server", "config"]

[tool.mypy]
strict = true
warn_no_return = false
check_untyped_defs = true
warn_return_any = false
explicit_package_bases = true
exclude = ['tests']

[tool.pytest.ini_options]
python_files = ['tests/**.py', 'test_*.py', '*_test.py']
